# neurocontainers

./: .cirun.yml  .codespellrc  .dockerignore  .gitattributes  .gitignore  Containerlist.md  Dockerfile.ants  Dockerfile.ants_2p2p0  Dockerfile.fsl_5p0p11  Dockerfile.minc_1p9p15  Dockerfile.minc_1p9p16  Dockerfile.minc_heudiconv  Dockerfile.quicksilver  README.md  Singularity.ants_2p2p0  Singularity.fsl_5p0p11  Singularity.minc_1p9p15  Singularity.minc_1p9p16  Singularity.minc_1p9p16_visual  Singularity.quicksilver  align_vasc_to_orig.py  automate_script.sh  build.py  build_.sh  build_afni.sh  build_ants.sh  build_braincharterVasculature.sh  build_c-pac-docker.sh  build_convert3D.sh  build_freesurfer.sh  build_fsl.sh  build_heudiconv.sh  build_minc.sh  build_minc_source.sh  build_mincvisual.sh  build_quicksilver.sh  container_list.txt  containerlist.sh  globalMountPointList.txt  main_build.sh  (+19 more)
.devcontainer/: devcontainer.json
.github/: .dive-ci.yml  new_container_issue_template.md
LASHiS/: build.sh  recipe.lashis_1.0
afni/: Dockerfile  build.sh  build_afni.sh  recipe.afni_20.1.02  recipe.afni_20.1.06
ants/: Dockerfile  build_ants.sh  recipe.ants_2.3.1
builder/: README.md  README_testing.md  build.py  check_status.sh  container_tester.py  generate_test_report.py  pr_test_runner.py  requirements.txt  test.py  test_all.sh  test_deploy.sh
convert3D/: build_convert3D.sh  recipe.convert3d_1.0.0
dke/: build_dke.sh  recipe.dke_1.0.0
docs/: requirements.md
freesurfer/: Dockerfile  build.sh  build_freesurfer.sh  recipe.freesurfer_6.0.1  recipe.freesurfer_7.0.0
(+898 files in other folders)
